--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
   - npm install @11ty/eleventy -g
 script: eleventy --pathprefix="/eleventy-base-blog/"
 deploy:
+  fqdn: aaronmarr.co.uk
   local-dir: _site
   provider: pages
   skip-cleanup: true
