--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "npx eleventy --watch",
     "debug": "DEBUG=* npx eleventy",
     "postcss-watch": "npx postcss --watch -d ./build ./css/**/*.css",
-    "build:css": "postcss src/css/tailwind.src.css -o src/tailwind.css --env production" 
+    "build:css": "npx postcss -d ./build ./css/**/*.css --env production"
   },
   "repository": {
     "type": "git",
@@ -33,13 +33,16 @@
     "luxon": "^1.12.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
+    "postcss-cli": "^6.0.1",
     "postcss-custom-media": "^7.0.8",
     "postcss-custom-properties": "^9.0.2",
+    "postcss-import": "^12.0.1",
     "postcss-nesting": "^7.0.0",
     "postcss-preset-env": "^6.7.0",
-    "postcss-cli": "^6.0.1",
-    "postcss-import": "^12.0.1",
-    "purgecss": "^1.1.0",
+    "purgecss": "^1.4.0",
     "tailwindcss": "^1.0.0"
+  },
+  "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0"
   }
 }
