--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "tailwindcss": "^1.0.0"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0"
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@ibm/plex": "^4.0.2",
+    "inter-ui": "^3.11.0"
   }
 }
